# cpp-template

./: CMakeLists.txt  README.md  _build.sh
src/: main.cpp  source_file.cpp  source_file.hpp
